[project]
name = "login_stats"
authors = [
    { name = "Shahzad Naser", email = "shahzadnaser1122@gmail.com"}
]
description = "Custom ERPNext app that automatically generates and sends a daily CSV file containing user login statistics via email."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
